--- a/ui/html/show.page.tmpl
+++ b/ui/html/show.page.tmpl
@@ -10,8 +10,8 @@
 </div>
 <pre><code>{{.Notes}}</code></pre> 
 <div class='metadata'>
-<time>Created: {{.Created}}</time> 
-<time>Due On: {{.Duedate}}</time>
+<time>Created: {{humanDate .Created}}</time> 
+<time>Due On: {{humanDate .Duedate}}</time>
 </div> 
 </div> 
 {{end}}
